# c_pixi

./: .gitignore  README.md  pyproject.toml
src/mathops/: __init__.py  _version.py  operations.py
tests/: test_operations.py
