[project]
authors = [{name = "Priyanka O", email = "21082240+priya-gitTest@users.noreply.github.com"}]
dependencies = []
name = "mathops"
requires-python = ">= 3.11"
#version = "0.1.0"
dynamic = ["version"]
description = "A simple math operations package"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
[project.urls]
Repository = "https://github.com/priya-gitTest/c_pixi"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling", "hatch-vcs"]

[tool.hatch.version]
source = "vcs"
[tool.hatch.build.hooks.vcs]
version-file = "src/mathops/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/mathops"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64", "osx-64", "osx-arm64", "win-64"]

[tool.pixi.pypi-dependencies]
mathops  = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.environments]
default = { solve-group = "default" }
test = { features = ["test"], solve-group = "default" }

[dependency-groups]
test = ["pytest"]
