[project]
authors = [{name = "Priyanka O", email = "21082240+priya-gitTest@users.noreply.github.com"}]
dependencies = []
name = "mathops"
description = "A simple math operations package"
requires-python = ">= 3.11"
#version = "0.1.0"
dynamic = ["version"]
license = {text = "MIT"}
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
[project.urls]
Repository = "https://github.com/priya-gitTest/c_pixi"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling", "hatch-vcs"]

[tool.hatch.version]
source = "vcs"
[tool.hatch.build.hooks.vcs]
version-file = "src/mathops/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/mathops"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64", "osx-64", "osx-arm64", "win-64"]

[tool.pixi.pypi-dependencies]
mathops  = { path = ".", editable = true }

[tool.pixi.dependencies]
python = ">=3.11"

[tool.pixi.feature.test.dependencies]
pytest = ">=8.0"
ruff = ">=0.6"

[tool.pixi.feature.dev.dependencies]
pytest = ">=8.0"
ruff = ">=0.6"
# Removed 'build = ">=1.0"' as it is not reliably available on conda-forge,
# and your build system requirements (hatchling, hatch-vcs) cover the build process.
twine = ">=5.0"
hatchling = ">=1.18"
hatch-vcs = ">=0.3"

[tool.pixi.tasks]

[tool.pixi.environments]
default = { features = ["dev"], solve-group = "default" }
test = { features = ["test"], solve-group = "default" }
dev = { features = ["dev"], solve-group = "default" }

[dependency-groups]
test = ["pytest>=8.4.2,<9", "ruff>=0.14.2,<0.15"]
dev = ["ruff", "build", "twine"]

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = []

[tool.pixi.feature.dev.tasks]
lint = "ruff check src tests"
format = "ruff format src tests"
lint-fix = "ruff check --fix src tests"
test = "pytest tests -v"
build-package = "python -m build"
check-package = "twine check dist/*"
upload-test = "twine upload --repository testpypi dist/*"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
